--- a/html_basic/html_advanced/css_basic/Flexbox/2-styles.css
+++ b/html_basic/html_advanced/css_basic/Flexbox/2-styles.css
@@ -181,11 +181,14 @@
       ============================= */
   
   .row {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
+        display: flex;
+      }
+      
+  ul.row {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
   
    /* .row::after {
     content: '';
