--- a/html_basic/html_advanced/css_basic/Flexbox/5-styles.css
+++ b/html_basic/html_advanced/css_basic/Flexbox/5-styles.css
@@ -179,10 +179,12 @@
   
   /* Grid
       ============================= */
-  
-  .ul.row {
+  .row {
     display: flex;
-    margin: -1rem;
+  }
+  
+  ul.row {
+    margin: 0;
     padding: 0;
     list-style: none;
   }
