--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -48,7 +48,7 @@
 /* background-image: url(smile.jpg); */
 }
 body{
-    background-image:url(/css_advanced/second/images/smile.jpg);
+    background-image:url(/css_advanced/images/bg.jpg);
     background-repeat: no-repeat;
     background-size: auto;
     
